--- a/index.ipynb
+++ b/index.ipynb
@@ -422,11 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "left_hand_eq = len(Q)\n",
+    "left_hand_eq = len(A|B|C)\n",
     "print(left_hand_eq)  # 9 elements in the set"
    ]
   },
