Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -500,12 +500,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "Eve # should be {'Rabbit', 'Goldfish'}"
+    "Eve.remove('Turtle') # should be {'Rabbit', 'Goldfish'}"
    ]
   },
   {
