--- a/index.ipynb
+++ b/index.ipynb
@@ -500,24 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Turtle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-d46189cbb4f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEve\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Turtle'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# should be {'Rabbit', 'Goldfish'}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mEve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Turtle'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Goldfish', 'Rabbit'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "Eve.remove('Turtle') # should be {'Rabbit', 'Goldfish'}\n",
+    "Eve.remove(\"Turtle\") # should be {'Rabbit', 'Goldfish'}\n",
     "Eve"
    ]
   },
