--- a/index.ipynb
+++ b/index.ipynb
@@ -529,23 +529,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'set' object has no attribute 'updateMary'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-e9a5327e5f9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mNina\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateMary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mNina\u001b[0m \u001b[0;31m# {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'set' object has no attribute 'updateMary'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'Cat',\n",
+       " 'Chicken',\n",
+       " 'Chinchilla',\n",
+       " 'Dog',\n",
+       " 'Donkey',\n",
+       " 'Goldfish',\n",
+       " 'Horse',\n",
+       " 'Parrot',\n",
+       " 'Rabbit'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Nina.updateMary\n",
+    "Nina.update(Mary)\n",
     "Nina # {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}"
    ]
   },
