Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -546,13 +546,13 @@
        " 'Rabbit'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Nina.update(Mary)\n",
+    "Nina|(Mary)\n",
     "Nina # {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}"
    ]
   },
