--- a/index.ipynb
+++ b/index.ipynb
@@ -569,8 +569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None\n",
-    "Mary  # set()"
+    "NoneMary  # set()"
    ]
   },
   {
