Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -569,7 +569,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NoneMary  # set()"
+    "Mary.c\n",
+    "Mary  # set()"
    ]
   },
   {
