--- a/index.ipynb
+++ b/index.ipynb
@@ -565,11 +565,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Mary.c\n",
+    "Mary.clear()\n",
     "Mary  # set()"
    ]
   },
@@ -586,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None\n",
+    "No\n",
     "n_species_Nina # 9"
    ]
   },
