Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -597,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N\n",
+    "n_species_Nina = len()\n",
     "n_species_Nina # 9"
    ]
   },
