--- a/index.ipynb
+++ b/index.ipynb
@@ -593,11 +593,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "n_species_Nina = len()\n",
+    "n_species_Nina = len(Nina)\n",
     "n_species_Nina # 9"
    ]
   },
