--- a/index.ipynb
+++ b/index.ipynb
@@ -805,11 +805,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code comes here"
+    "# Your code comes here\n",
+    "set(eu.Country) < set(europe.Country)"
    ]
   },
   {
