--- a/index.ipynb
+++ b/index.ipynb
@@ -826,10 +826,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'  Switzerland ',\n",
+       " '  Vatican City ',\n",
+       " ' Albania ',\n",
+       " ' Andorra ',\n",
+       " ' Armenia ',\n",
+       " ' Azerbaijan ',\n",
+       " ' Belarus ',\n",
+       " ' Bosnia and Herzegovina ',\n",
+       " ' Faroe Islands (Denmark) ',\n",
+       " ' Georgia ',\n",
+       " ' Gibraltar (UK)',\n",
+       " ' Guernsey (UK) ',\n",
+       " ' Iceland ',\n",
+       " ' Isle of Man (UK) ',\n",
+       " ' Jersey (UK) ',\n",
+       " ' Kosovo ',\n",
+       " ' Liechtenstein ',\n",
+       " ' Macedonia ',\n",
+       " ' Moldova ',\n",
+       " ' Monaco ',\n",
+       " ' Montenegro ',\n",
+       " ' Norway ',\n",
+       " ' Russia',\n",
+       " ' San Marino ',\n",
+       " ' Serbia ',\n",
+       " ' Svalbard (Norway) ',\n",
+       " ' Turkey ',\n",
+       " ' Ukraine',\n",
+       " ' Åland Islands (Finland) '}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(europe.Country) - set(eu.Country)"
+   ]
   },
   {
    "cell_type": "markdown",
